// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Bootstrap and configure Azure API Management as an AI Gateway for securing, observing, and controlling AI models, tools (MCP Servers), and agents.
USE FOR: setup AI gateway, configure APIM gateway, secure AI models, protect AI agents, rate limit model requests, rate limit tool requests, semantic caching, content safety, token limits, load balancing AI endpoints, MCP server gateway, import OpenAPI spec, add API to gateway, convert API to MCP, expose API as MCP server
DO NOT USE FOR: creating AI models (use azure-ai), deploying web apps (use azure-deploy), general API management without AI (use azure-deploy), cost analysis (use azure-cost-estimation)
",
  "extractedKeywords": [
    "agents",
    "aigateway",
    "aks",
    "analysis",
    "apim",
    "apps",
    "authentication",
    "azure",
    "azure-ai",
    "azure-cost-estimation",
    "azure-deploy",
    "balancing",
    "bicep",
    "bootstrap",
    "caching",
    "cli",
    "configure",
    "content",
    "controlling",
    "convert",
    "cost",
    "creating",
    "deploy",
    "deploying",
    "endpoints",
    "expose",
    "gateway",
    "general",
    "identity",
    "import",
    "limit",
    "limits",
    "load",
    "management",
    "mcp",
    "model",
    "models",
    "monitor",
    "observability",
    "observing",
    "openapi",
    "protect",
    "rate",
    "requests",
    "safety",
    "secure",
    "securing",
    "security",
    "semantic",
    "server",
    "servers",
    "setup",
    "spec",
    "token",
    "tool",
    "tools",
    "without",
  ],
  "name": "azure-aigateway",
}
`;

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "aigateway",
  "aks",
  "analysis",
  "apim",
  "apps",
  "authentication",
  "azure",
  "azure-ai",
  "azure-cost-estimation",
  "azure-deploy",
  "balancing",
  "bicep",
  "bootstrap",
  "caching",
  "cli",
  "configure",
  "content",
  "controlling",
  "convert",
  "cost",
  "creating",
  "deploy",
  "deploying",
  "endpoints",
  "expose",
  "gateway",
  "general",
  "identity",
  "import",
  "limit",
  "limits",
  "load",
  "management",
  "mcp",
  "model",
  "models",
  "monitor",
  "observability",
  "observing",
  "openapi",
  "protect",
  "rate",
  "requests",
  "safety",
  "secure",
  "securing",
  "security",
  "semantic",
  "server",
  "servers",
  "setup",
  "spec",
  "token",
  "tool",
  "tools",
  "without",
]
`;
